# furo50

./: .buildinfo  .gitmodules  CHANGELOG.md  LICENSE  README.md  github-star-btn.html  index.html  objects.inv  pyproject.toml  pytest.ini  requirements_dev.txt  searchindex.js  tox.ini
.doctrees/: changelog.doctree  customisation.doctree  design-changes.doctree  environment.pickle  index.doctree  license.doctree
.doctrees/example/: week5.doctree
.doctrees/kitchen-sink/: admonitions.doctree  api.doctree  blocks.doctree  generic.doctree  images.doctree  index.doctree  lists.doctree  really-long.doctree  structure.doctree  tables.doctree  typography.doctree
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  greetings.yml  greetings2.yml  publish.yml  tests.yml
_sources/: license.md.txt
_sources/example/: week5.md.txt
_sources/kitchen-sink/: generic.rst.txt  tables.rst.txt
_static/: pygments.css
changelog/: index.html
cs50docs/: .buildinfo  index.html  objects.inv  searchindex.js
cs50docs/.doctrees/: certificates.cs50.io.doctree  cli50.doctree  cs50.dev.doctree  docker.doctree  environment.pickle  forms.cs50.io.doctree  github.doctree  heroku.doctree  id.cs50.io.doctree  index.doctree  lab.doctree  manual.cs50.io.doctree  pip.doctree  python.doctree  render.cs50.io.doctree  render50.doctree  sandbox.doctree  (+9 more)
customisation/: index.html
design-changes/: index.html
docs/: changelog.md  changelog.rst  conf.py  customisation.rst  design-changes.md  index.md  index.rst
genindex/: index.html
kitchen-sink/: index.html
license/: index.html
py-modindex/: index.html
search/: index.html
tests/: test_build.py  test_style.py  test_utils.py
(+95 files in other folders)
